AMP-25789 Translation issue - spanish text does not fit in button
AMP-25789 Translation issue - spanish text does not fit in button

--- a/import-core/import-ui/src/main/webapp/client/styles/main.css
+++ b/import-core/import-ui/src/main/webapp/client/styles/main.css
@@ -344,7 +344,7 @@ tbody.scrollablebody td, thead.scrollablebody th {
   height:40px;
 }
 .btn-custom{
-  width:150px;
+  min-width:150px;
 }
 
 #language-selector{
